# coldest

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: pointing.ipynb  understand_subarrays.ipynb
resources/: 20pc_TY_SpTcut_FINAL_SORTED.csv  NircamImagingIntramoduleBox.txt  NircamImagingSubarrayDither.txt  position_file_2473.csv
src/coldest/: download.py  pointing.py
