[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "coldest"
dynamic = ["version"]
description = "Codes for the Cool Brown Dwarf JWST Survey"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Thomas Vandal", email = "thomas.vandal@umontreal.ca"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "astroquery",
    "astropy",
    "jwst",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/vandalt/coldest"
Repository = "https://github.com/vandalt/coldest"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/coldest/_version.py"
